[gd_scene load_steps=3 format=3 uid="uid://dqgvg7ek30774"]

[ext_resource type="Script" uid="uid://b1a2exggvbkey" path="res://scripts/killzone.gd" id="1_3brf5"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_n3uws"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_3brf5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_n3uws")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
